# BAR

./: BARFileFormat.md  Cargo.toml  README.md  settings.json
src/: barbook.rs  binarystruct.rs  error.rs  lib.rs  main.rs
src/barbook/: barchapter.rs
src/barbook/barchapter/: compress.rs  rcsubstring.rs
tests/: barfile_test.rs
tests/data/: KJV.ibar
