[package]
name = "biblearchive"
version = "0.1.1-alpha.1"
edition = "2024"
authors = ["Chris Hamer-Hodges <chris.hhodges@gmail.com>"]
license = "Apache-2.0 OR MIT"
keywords = ["bible", "archive"]
description = "A Bible archive format designed to be fast and compact."
repository = "https://github.com/chrisjhh/BAR"
readme = "README.md"

[dependencies]
flate2 = "1.1.5"
lzokay-native = "0.1.0"
rcsubstring = "0.2.0"
bible-data = {git = "https://github.com/chrisjhh/bible-data"}

[dev-dependencies]
hex = "0.4.3"
crc32fast = "1.5.0"
